# agentic-workflows

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
agent/: __main__.py  agent.py  ci_mode_prompt.txt  config_loader.py  main.py  mcp_client.py  pipeline.py  prompts.py  system_prompt.txt  tool_caller.py
agent/prompts/: ci_mode_prompt.txt  system_prompt.txt
backend/agent/: config_loader.py  main.py  mcp_client.py  pipeline.py  prompts.py
backend/agent/commands/: agentic.py  deterministic.py  utils.py
backend/mcp-servers/perf-test-server/src/: server.ts
backend/mcp-servers/results-analyzer/src/: index.ts
backend/mcp-servers/service-registry/: package.json
backend/mcp-servers/spring-metrics/: package.json
backend/mcp-servers/spring-metrics/src/: index.ts
config/: defaults.yaml  mcp-servers.yaml  services.yaml
frontend/dashboard/: package.json
frontend/dashboard/public/: app.js  index.html  style.css
frontend/dashboard/src/: server.ts
frontend/dashboard/src/routes/: results.ts  run.ts  services.ts
mcp-servers/dashboard/public/: index.html
mcp-servers/dashboard/src/: config.ts
mcp-servers/dashboard/src/routes/: run.ts
mcp-servers/perf-test-server/: package.json
mcp-servers/perf-test-server/src/: index.ts
mcp-servers/perf-test-server/src/config/: defaults.ts
mcp-servers/perf-test-server/src/runner/: k6-runner.ts
mcp-servers/results-analyzer/: package.json
mcp-servers/results-analyzer/src/: index.ts
mcp-servers/service-registry/src/: index.ts  server.ts
mcp-servers/spring-metrics/src/: index.ts
(+15 files in other folders)
